# dbos

./: Cargo.toml  bin-to-vdi-debug.sh  bin-to-vdi-release.sh  bin-to-vdi.sh  debug.bat  release.bat
.cargo/: config.toml
src/: allocator.rs  cpu_specs.rs  driver.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/driver/: keyboard.rs  pci.rs
src/task/: executor.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
